# movepress

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  FUNDING.yml  Movefile.toml  README.md  box.json  composer.json  make  movefile.yml.example  package.json  phpunit.xml
.agent/: PROJECT.md  outline.md  philosophy.md
.agent/onboarding/: architect.md  engineer.md  pm.md  qa.md
.agent/templates/: ticket-template.md
.agent/tickets/: 001-cli-global-ux.md  002-movefile-parser-env-registry.md  003-command-executor-abstraction.md  003-ssh-client-command-layer.md  004-manifest-and-diff-engine.md  004-path-and-target-resolver.md  005-file-sync-service.md  005-transfer-engine-compressed-direct.md  006-database-sync-pipeline.md  006-database-sync-service.md  007-all-operation-orchestrator.md  007-all-scope-orchestrator.md  008-safety-and-dry-run-guards.md  009-logging-and-dependency-diagnostics.md
docs/: COMMANDS.md  CONFIGURATION.md  DOCKER.md  EXAMPLES.md  MIGRATION.md  TROUBLESHOOTING.md  plan.md  todo.md
src/: Application.php  all_scope.rs  command.rs  config.rs  db_sync.rs  diagnostics.rs  file_sync.rs  logging.rs  main.rs  path_resolver.rs  temp.rs  wp-cli-runner.php
src/Commands/: AbstractSyncCommand.php  BackupCommand.php  GitSetupCommand.php  InitCommand.php  PostFilesCommand.php  PostImportCommand.php  PullCommand.php  PushCommand.php  SshCommand.php  StatusCommand.php  ValidateCommand.php
src/Config/: ConfigLoader.php
src/Console/: CommandFormatter.php  MovepressStyle.php
tests/: cli_tests.rs
tests/cmd/: cli.trycmd
(+59 files in other folders)
