[package]
name = "movepress"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread", "process", "io-util"] }

[dev-dependencies]
trycmd = "0.15"
